--- a/test-cases.yml
+++ b/test-cases.yml
@@ -3,7 +3,7 @@
   requirement: |
     Над кнопкой "Корзина", верхнем правом углу, появляется числовое обозначение равное выбранному количеству товаров
   prerequisites: |
-    Открыта главная страница сайта Hexlet Store
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   test-data: |
     Тестовых данных нет
   steps:
@@ -17,7 +17,7 @@
   requirement: |
     При нажатии на кнопку "Корзина", пользователь перемещается во вкладку "Корзина"
   prerequisites: |
-    Открыта главная страница сайта Hexlet Store
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   test-data: |
     Тестовых данных нет
   steps:
@@ -30,7 +30,7 @@
   requirement: |
     При нажатии на кнопку "Язык", верхнем правом углу, предоставляется выбор языков. Выбираем русский язык
   prerequisites: |
-    Открыта главная страница сайта Hexlet Store в англоязычной версии
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/ в англоязычной версии
   test-data: |
     Тестовых данных нет
   steps:
@@ -44,7 +44,7 @@
   requirement: |
     Верхнем левом углу, выбираем n категорию, на странице отображаются соответствущие товары
   prerequisites: |
-    Открыта главная страница сайта Hexlet Store
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   test-data: |
     Тестовых данных нет
   steps: 
@@ -60,7 +60,7 @@
   requirement: |
     Фильтр отображает диапазон товаров, учитывая введенные числа минимальной и максимальной ценны товара
   prerequisites: |
-    Открыта главная страница сайта Hexlet Store
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   test-data: |
     Тестовых данных нет
   steps:
