--- a/testing-report.yml
+++ b/testing-report.yml
@@ -8,7 +8,7 @@
   
 - summary: |
     Смена языка сайта на русскоязычную версию
-  status: pass
+  status: fail
   
 - summary: |
     При выборе определённой категории, отображаются соответствующие товары
