--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,5 +1,5 @@
 - summary: |
-    Добавление товара в корзину 
+    Числовое обозначение над кнопкой "Корзина"
   requirement: |
     Над кнопкой "Корзина", верхнем правом углу, появляется числовое обозначение равное выбранному количеству товаров
   prerequisites: |
@@ -13,17 +13,33 @@
     Над кнопкой "Корзина" правильное количество товаров
     
 - summary: |
-    Переход во вкладку "Корзина"
+    Добавление товара в корзину 
   requirement: |
-    При нажатии на кнопку "Корзина", пользователь перемещается во вкладку "Корзина"
+    Добавляем товар в корзину и проверяем содержимое корзины на соответствие
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps: 
+    - Нажимаем кнопку "В корзину" на карточке товара
+    - Нажимаем кнопку "Корзина", верхнем правом углу
+    - Смотрим содержимое страницы "Корзина"
+  expected-result: |
+    В корзине находится выбранный товар
+    
+- summary: |
+    Просмотр страницы "Корзина"
+  requirement: |
+    При нажатии на кнопку "Корзина", пользователь перемещается на страницу "Корзина"
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   test-data: |
     Тестовых данных нет
   steps:
     - Нажимаем кнопку "Корзина"
+    - Переходим на  страницу "Корзина"
   expected-result: |
-    Пользователь перешёл во вкладку "Корзина"
+    Пользователь просматривает содержимое "Корзины"
     
 - summary: |
     Смена языка сайта на русскоязычную версию
@@ -40,6 +56,46 @@
     Сайт меняется на русскоязычную версию
     
 - summary: |
+    Просмотор товаров на странице
+  requirement: |
+    На главной странице сайта отображены первые 30 товаров 
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps:
+    - Перемещаемся по странице с помощью колеса мыши или ползунка самого сайта
+  expected-result: |
+    На странице сайта, можно просмотреть первые 30 товаров
+    
+- summary: |
+    Перемещение внутри сайта с помощью конпок "Предыдущая" и "Следующая"
+  requirement: |
+    При нажатии на одну из кнопок, пользователь перемещается на другую страницу с 30 товарами
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps:
+    - Нажимаем на кнопку "Следующая"
+  expected-result: |
+    Пользователь переместился на другую страницу с 30 товарами
+    
+- summary: |
+    Просмотр подробной информации о товаре 
+  requirement: |
+    При нажатии на карточку товара, пользователь проваливается на страницу выбраного товара
+  prerequisites: |
+    Открытая главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps:
+    - Нажимаем на карточку товара
+    - Переходим на страницу товара
+  expected-result: |
+    Под фотографиями выбранного товара находится подробное описание
+
+- summary: |
     При выборе определённой категории, отображаются соответствующие товары
   requirement: |
     Верхнем левом углу, выбираем n категорию, на странице отображаются соответствущие товары
@@ -51,23 +107,40 @@
     - Нажимаем "Категория"
     - Из предложенного списка выбираем любой
     - На странице отображаются товары из этой категории
-    - Смотрим на соответсвтие товаров к категории 
+    - Смотрим на соответствие товаров к категории 
   expected-result: |
     Отображённые товары соответсвуют выбранной категории
     
 - summary: |
-    Фильтр цен работает правильно
+    Поиск по ключевому слову, работает правильно
   requirement: |
-    Фильтр отображает диапазон товаров, учитывая введенные числа минимальной и максимальной ценны товара
+    Верхнем левом углу, в поле "Поиск", вводим любой товар. На странице отображается введенный товар
+  prerequisites:
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps:
+    - Вводим в поле "Поиск" любой товар
+    - На странице отображается введенный товар
+    - Смотрим на соответствие 
+  expected-result: |
+    Отображённый товар соответствует введённому в поле "Поиск"
+    
+- summary: |
+    Фильтр по цене работает правильно
+  requirement: |
+    Фильтр отображает диапазон товаров, учитывая введенные числа минимальной и максимальной цены товара
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   test-data: |
     Тестовых данных нет
   steps:
-    - Вводим минимальную и максимальную ценну 
+    - Вводим минимальную и максимальную цену 
     - Смотрим на появившиеся товары 
   expected-result: |
-    Отображённые товары соответсвуют выбранному фильтру цен
+    Отображённые товары соответствуют выбранному фильтру цен
+    
+
     
     
     
