--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,9 +1,13 @@
 - summary: |
-    Добавление товара в корзину 
+    Числовое обозначение над кнопкой "Корзина"
   status: pass
   
 - summary: |
-    Переход во вкладку "Корзина"
+    Добавление товара в корзину
+  status: pass
+  
+- summary: |
+    Просмотр страницы "Корзина"
   status: pass
   
 - summary: |
@@ -11,7 +15,23 @@
   status: fail
   
 - summary: |
+    Просмотор товаров на странице
+  status: pass
+  
+- summary: |
+    Перемещение внутри сайта с помощью конпок "Предыдущая" и "Следующая"
+  status: pass
+
+- summary: |
+    Просмотр подробной информации о товаре
+  status: pass
+  
+- summary: |
     При выборе определённой категории, отображаются соответствующие товары
+  status: pass
+  
+- summary: |
+    Поиск по ключевому слову, работает правильно
   status: pass
   
 - summary: |
