--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,5 +1,5 @@
 - summary: |
-    Числовое обозначение над кнопкой "Корзина"
+    Правильное числовое обозначение над кнопкой "Корзина"
   requirement: |
     Над кнопкой "Корзина", верхнем правом углу, появляется числовое обозначение равное выбранному количеству товаров
   prerequisites: |
