--- a/regress-report.yml
+++ b/regress-report.yml
@@ -81,3 +81,15 @@ bugreportes:
      Фильтр товара по цвету и размеру присутствует в функциональности сайта
    actual-result: |
      Фильтр товара по цвету и размеру отсутствует на сайте
+     
+ - summary: |
+     Пользователь может авторизироваться на сайте 
+   environment: |
+     Google Chrome  13.0.5672.127 (Официальная сборка), (64 бит)
+     ОС Windows 10
+   steps-to-reproduce: |
+     1. Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+   expected-result: |
+     Авторизация присутствует в функциональности сайта
+   actual-result: |
+     Авторизация на сайте отсутствует
