--- a/regress-report.yml
+++ b/regress-report.yml
@@ -41,7 +41,7 @@ test-cases:
     
 bugreportes:
   - summary: |
-      Сайт должен иметь полный функционал в мобильной версии
+      Сайт должен иметь мобильную версию
     environment: |
       Google Chrome  13.0.5672.127 (Официальная сборка), (64 бит)
       ОС Windows 10
@@ -51,9 +51,9 @@ bugreportes:
       3. Нажать на "Toggle device toolbar"
       4. Выбираем любой девайс
     expected-result: |
-      Присутствует выбор категорий в мобильной версии
+      Сайт имеет мобильную версию 
     actual-result: |
-      Отсутствие выбора категорий в мобильной версии 
+      Сайт не имеет мобильную версию 
     
   - summary: |
       Полный перевод сайта в русскоязычной версии
