--- a/requirements.yml
+++ b/requirements.yml
@@ -3,6 +3,10 @@ functional:
   - Пользователь должен иметь возможность фильтровать товары по цене, цвету, размеру и т.д.
   - Пользователь должен иметь возможность просматривать товары и просматривать подробную информацию о товаре.
   - Пользователь должен иметь возможность добавлять товары в корзину и просматривать содержимое корзины.
+  - Пользователь должен иметь возможность просматривать каталог товаров, фильтруя их и пользуясь постраничным выводом.
+  - Пользователь должен иметь возможность добавить товар в корзину и продолжить выбирать товары в каталоге.
+  - Пользователь должен иметь возможность просматривать на странице товара и в каталоге название, рейтинг, цена со скидкой и без.
+  - Пользователь должен иметь возможность на странице корзины удалить товар из корзины, продолжить выбирать товары в каталоге, оформить заказ с переходом на страницу оплаты.
 non-functional:
   - Веб-сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы.
   - Сайт должен быть безопасным и защищать данные пользователя.
@@ -10,9 +14,9 @@ non-functional:
   - Сайт должен быть протестирован на совместимость с последними версиями браузеров.
   - Сайт должен быть способен обрабатывать большое количество трафика.
   - Сайт должен быть доступен на различных устройствах.
+  - Корзина сайта хранится в сессии браузера.
 implicit:
-  - Пользователь должен авторизироваться перед оформлением заказа.
-  - Пользователь долен иметь возможность удалять товар из корзины. 
+  - Пользователь должен авторизироваться перед оформлением заказа. 
   - Сайт должен быть мультиязычен. 
   - Пользователь должен иметь возможность просматривать историю заказов.
   - Пользователь должен иметь возможность вернуться на главную страницу, по нажатию логотипа сайта.
