--- a/test-cases.yml
+++ b/test-cases.yml
@@ -28,20 +28,6 @@
     В корзине находится выбранный товар
     
 - summary: |
-    Просмотр страницы "Корзина"
-  requirement: |
-    При нажатии на кнопку "Корзина", пользователь перемещается на страницу "Корзина"
-  prerequisites: |
-    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
-  test-data: |
-    Тестовых данных нет
-  steps:
-    - Нажимаем кнопку "Корзина"
-    - Переходим на  страницу "Корзина"
-  expected-result: |
-    Пользователь просматривает содержимое "Корзины"
-    
-- summary: |
     Смена языка сайта на русскоязычную версию
   requirement: |
     При нажатии на кнопку "Язык", верхнем правом углу, предоставляется выбор языков. Выбираем русский язык
@@ -69,9 +55,9 @@
     На странице сайта, можно просмотреть первые 30 товаров
     
 - summary: |
-    Перемещение внутри сайта с помощью конпок "Предыдущая" и "Следующая"
+    Перемещение внутри сайта с помощью конпки "Следующая"
   requirement: |
-    При нажатии на одну из кнопок, пользователь перемещается на другую страницу с 30 товарами
+    При нажатии на кнопку, пользователь перемещается на другую страницу с 30 товарами
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   test-data: |
@@ -80,6 +66,20 @@
     - Нажимаем на кнопку "Следующая"
   expected-result: |
     Пользователь переместился на другую страницу с 30 товарами
+  
+- summary: |
+    Перемещение внутри сайта с помощью конпки "Предыдущая"
+  requirement: |
+    При нажатии на кнопку, пользователь перемещается на первую страницу с 30 товарами
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps:
+    - Нажимаем на кнопку "Следующая"
+    - Нажимаем на кнопку "Предыдущая"
+  expected-result: |
+    Пользователь вернулся на первую страницу с 30 товарами
     
 - summary: |
     Просмотр подробной информации о товаре 
@@ -115,7 +115,7 @@
     Поиск по ключевому слову, работает правильно
   requirement: |
     Верхнем левом углу, в поле "Поиск", вводим любой товар. На странице отображается введенный товар
-  prerequisites:
+  prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   test-data: |
     Тестовых данных нет
@@ -125,6 +125,20 @@
     - Смотрим на соответствие 
   expected-result: |
     Отображённый товар соответствует введённому в поле "Поиск"
+    
+- summary: |
+    Поиск по ключевому слову, не выводит несуществующие товары 
+  requirement: |
+    Верхнем левом углу, в поле "Поиск", вводим несуществующий товар. На странице появляется сообщение "Ничего не найдено!"
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps:
+    - Вводим в поле "Поиск" несуществующий товар
+    - На странице отображается "Ничего не найдено!"
+  expected-result: |
+    "Ничего не найдено!" отобразилось на странице сайта
     
 - summary: |
     Фильтр по цене работает правильно
@@ -138,9 +152,4 @@
     - Вводим минимальную и максимальную цену 
     - Смотрим на появившиеся товары 
   expected-result: |
-    Отображённые товары соответствуют выбранному фильтру цен
-    
-
-    
-    
-    
+    Отображённые товары соответствуют выбранному фильтру цен   
