--- a/requirements.yml
+++ b/requirements.yml
@@ -21,3 +21,4 @@ implicit:
   - Пользователь должен иметь возможность просматривать историю заказов.
   - Пользователь должен иметь возможность вернуться на главную страницу, по нажатию логотипа сайта.
   - Пользователь должен иметь возможность перемещаться внутри сайта на другие страницы с товарами с помощью конопок "Предыдущая" и "Следующая".
+  - Сайт должен иметь "Интерактивный поиск"
