--- a/test-cases.yml
+++ b/test-cases.yml
@@ -153,3 +153,6 @@
     - Смотрим на появившиеся товары 
   expected-result: |
     Отображённые товары соответствуют выбранному фильтру цен   
+    
+- summary: |
+    И
