--- a/test-cases.yml
+++ b/test-cases.yml
@@ -155,4 +155,17 @@
     Отображённые товары соответствуют выбранному фильтру цен   
     
 - summary: |
-    И
+    Интерактивный поиск работает правильно
+  requirement: |
+    При поэтапном вводе символов, на странице отображаются те товары, которые соответствуют введеным ранее поэтапно символам
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps:
+    - Вводим первый символ
+    - На странице отображаются товары, согласно введеному первому символу
+    - Вводим второй символ, на странице отображаются товары, согласно двум этим символам 
+    - Вводим символы до тех пор, пока из символов не образуется название любого товара
+  expected-result: |
+    На каждом этапе ввода символа, на странице отображались товары, согласно поэтапному вводу символов
