--- a/requirements.yml
+++ b/requirements.yml
@@ -15,10 +15,11 @@ non-functional:
   - Сайт должен быть способен обрабатывать большое количество трафика.
   - Сайт должен быть доступен на различных устройствах.
   - Корзина сайта хранится в сессии браузера.
+  - Сайт разработан согласно технологиям SPA-приложениям.
 implicit:
   - Пользователь должен авторизироваться перед оформлением заказа. 
   - Сайт должен быть мультиязычен. 
   - Пользователь должен иметь возможность просматривать историю заказов.
   - Пользователь должен иметь возможность вернуться на главную страницу, по нажатию логотипа сайта.
   - Пользователь должен иметь возможность перемещаться внутри сайта на другие страницы с товарами с помощью конопок "Предыдущая" и "Следующая".
-  - Сайт должен иметь "Интерактивный поиск"
+  - Сайт должен иметь "Интерактивный поиск".
