--- a/test-cases.yml
+++ b/test-cases.yml
@@ -28,6 +28,82 @@
     В корзине находится выбранный товар
     
 - summary: |
+    Добавление нескольких товаров в корзину
+  requirement: |
+    Добавляем несколько товаров в корзину и проверяем содержимое корзины на соответствие
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps:
+    - Нажимаем кнопку "В корзину" на карточке нескольких товаров
+    - Нажимаем кнопку "Корзина", верхнем правом углу
+    - Смотрим содержимое страницы "Корзина"
+  expected-result: |
+    В корзине находятся выбранные товары
+    
+- summary: |
+    Удаление товара из корзины
+  requirement: |
+    На странице "Корзина" можно удалить выбранный товар
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps:
+    - Нажимаем на кнопку "В корзину" на карточке товара
+    - Нажимаем на кнопку "Корзина"
+    - Видим товар в "Корзине"
+    - Нажимаем на кнопку "Удалить" 
+  expected-result: |
+    Товара больше нет в "Корзине"
+    
+- summary: |
+    Удаление нескольких товаров из корзины
+  requirement: |
+    На странице "Корзина" можно удалить выбранные товары
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps:
+    - Нажимаем на кнопку "В корзину" на карточке нескольких товаров
+    - Нажимаем на кнопку "Корзина"
+    - Видим товары в "Корзине"
+    - Нажимаем на кнопку "Удалить" на каждом товаре
+  expected-result: |
+    Товаров больше нет в "Корзине"
+    
+- summary: |
+    Единомоментное удаление товаров их корзины
+  requirement: |
+    При нажатии кнопки "Очистить корзину", единомоментно удаляются все товары из "Корзины"
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps: 
+    - Нажимаем на кнопку "В корзину" на карточке нескольких товаров
+    - Нажимаем на кнопку "Корзина"
+    - Видим товары в "Корзине"
+    - Нажимаем на кнопку "Очистить корзину"
+  expected-result: |
+    Товаров больше нет в "Корзине"
+    
+- summary: |
+    Продолжение покупок из корзины
+  requirement: |
+    Находясь на странице "Корзина", при нажатии на кнопку "Продолжить покупку" возвращаемся на главную страницу
+  prerequisites: |
+    Открыта страница "Корзина" https://hexlet-products-store.vercel.app/cart
+  test-data: |
+    Тестовых данных нет
+  steps:
+    - Нажимаем на кнопку "Продолжить покупку"
+  expected-result: |
+    Возвращаемся на главную страницу сайта
+    
+- summary: |
     Смена языка сайта на русскоязычную версию
   requirement: |
     При нажатии на кнопку "Язык", верхнем правом углу, предоставляется выбор языков. Выбираем русский язык
@@ -136,9 +212,8 @@
     Тестовых данных нет
   steps:
     - Вводим в поле "Поиск" несуществующий товар
-    - На странице отображается "Ничего не найдено!"
   expected-result: |
-    "Ничего не найдено!" отобразилось на странице сайта
+    На странице отображается "Ничего не найдено!"
     
 - summary: |
     Фильтр по цене работает правильно
@@ -157,15 +232,42 @@
 - summary: |
     Интерактивный поиск работает правильно
   requirement: |
-    При поэтапном вводе символов, на странице отображаются те товары, которые соответствуют введеным ранее поэтапно символам
+    При поэтапном вводе символов в "Поиск", на странице отображаются те товары, которые соответствуют введеным ранее поэтапно символам
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   test-data: |
-    Тестовых данных нет
+    Использует любое название товара представленого на сайте
   steps:
-    - Вводим первый символ
+    - Вводим первый символ выбранного товара в "Поиск"
     - На странице отображаются товары, согласно введеному первому символу
     - Вводим второй символ, на странице отображаются товары, согласно двум этим символам 
-    - Вводим символы до тех пор, пока из символов не образуется название любого товара
+    - Вводим символы до тех пор, пока на странице не отобразиться только один товар
   expected-result: |
     На каждом этапе ввода символа, на странице отображались товары, согласно поэтапному вводу символов
+    
+- summary: |
+    Интерактивный поиск  не отображает несуществующие товары при вводе одного символа
+  requirement: |
+    При вводе символа, которого нет в названии товаров существующих на сайте. На странице отображается "Ничего не найдено!"
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data:
+    Тестовых данных нет
+  steps:
+    - Вводим символ, которого нет в названии товара, в "Поиск"
+  expected-result: |
+    На странице отображается "Ничего не найдено!"
+    
+- summary: |
+    Интерактивный поиск  не отображает несуществующие товары при вводе комбинций символов 
+  requirement: |
+    При вводе символов, которых нет в названии товаров существующих на сайте. На странице отображается "Ничего не найдено!"
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data:
+    Тестовых данных нет
+  steps:
+    - Вводим любую комбинацию символов, которого нет в названии товара, в "Поиск"
+  expected-result: |
+    На странице отображается "Ничего не найдено!"
+    
