--- a/test-cases.yml
+++ b/test-cases.yml
@@ -104,6 +104,23 @@
     Возвращаемся на главную страницу сайта
     
 - summary: |
+    Покупка товара 
+  requirement: |
+    При нажатии на кнопку "Оформить заказ", совершается покупка товара
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps: 
+    - Нажимаем на кнопку "В корзину" на карточке товара
+    - Нажимаем на кнопку "Корзина"
+    - Переходим на страницу "Корзина"
+    - Видим товар 
+    - Нажимаем на кнопку "Оформить заказ"
+  expected-result: |
+    Покупка совершена, появляется окошко "Заказ успешно оформлен"
+    
+- summary: |
     Смена языка сайта на русскоязычную версию
   requirement: |
     При нажатии на кнопку "Язык", верхнем правом углу, предоставляется выбор языков. Выбираем русский язык
