--- a/test-cases.yml
+++ b/test-cases.yml
@@ -241,11 +241,42 @@
   test-data: |
     Тестовых данных нет
   steps:
+    - Прокручиваем страницу вниз
     - Вводим минимальную и максимальную цену 
     - Смотрим на появившиеся товары 
   expected-result: |
     Отображённые товары соответствуют выбранному фильтру цен   
     
+- summary: |
+    Фильтр цен взаимодействует не с нулём или не с целыми положительными числами
+  requirement: |
+    При вводе целых отрицательных, иррациональных или дробных чисел, на странице отображается "Ничего не найдено!"
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps:
+    - Прокручиваем страницу вниз
+    - Вводим целые отрицательные, иррациональные или дробные числа
+  expected-result: |
+    На странице отображается "Ничего не найдено!"
+    
+- summary: |
+    Фильтр по наличию включён
+  requirement: |
+    При использовании фильтра по наличию, отображаются только те товары, которые есть в наличии
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data:
+    Тестовых данных нет
+  steps:
+    - Прокрутить страницу вниз
+    - Слева снизу, фильтр по наличию
+    - Проверить включён ли фильтр 
+    - Фильтр включён
+  expected-result:
+    На странице отображаются только те товары, которые есть в наличии
+       
 - summary: |
     Интерактивный поиск работает правильно
   requirement: |
