--- a/test-cases.yml
+++ b/test-cases.yml
@@ -267,7 +267,7 @@
     При использовании фильтра по наличию, отображаются только те товары, которые есть в наличии
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
-  test-data:
+  test-data: |
     Тестовых данных нет
   steps:
     - Прокрутить страницу вниз
@@ -299,7 +299,7 @@
     При вводе символа, которого нет в названии товаров существующих на сайте. На странице отображается "Ничего не найдено!"
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
-  test-data:
+  test-data: |
     Тестовых данных нет
   steps:
     - Вводим символ, которого нет в названии товара, в "Поиск"
@@ -312,10 +312,24 @@
     При вводе символов, которых нет в названии товаров существующих на сайте. На странице отображается "Ничего не найдено!"
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
-  test-data:
+  test-data: |
     Тестовых данных нет
   steps:
     - Вводим любую комбинацию символов, которого нет в названии товара, в "Поиск"
   expected-result: |
     На странице отображается "Ничего не найдено!"
     
+- summary: |
+    Поле "Поиск" работает
+  requirement: |
+    Поле "Поиск" принимает символьные обозначение
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps: 
+    - Вводим любой символ в сторку поиск 
+    - Страница отображает то, что соответствует введённому символу 
+  expected-result:
+    Поле "Поиск" принимает введённые символы и выводит результат на странице
+ 
