--- a/test-cases.yml
+++ b/test-cases.yml
@@ -274,9 +274,22 @@
     - Слева снизу, фильтр по наличию
     - Проверить включён ли фильтр 
     - Фильтр включён
-  expected-result:
-    На странице отображаются только те товары, которые есть в наличии
-       
+  expected-result: |
+    При использовании функционала сайта, где идёт отображение товара на странице, будет предоставлен только товар в наличии
+    
+- summary: |
+    Фильтр по наличию отключён
+  requirement: |
+    При отключенном фильтре по наличию, отображаются все товары
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps: 
+    - Прокрутить странцу вниз
+    - Отключить фильтр по наличию 
+  expected-result: |
+    При использовании функционала сайта, где идёт отображение товара на странице, будет предоставлен весь товар
 - summary: |
     Интерактивный поиск работает правильно
   requirement: |
