--- a/test-cases.yml
+++ b/test-cases.yml
@@ -335,7 +335,7 @@
 - summary: |
     Поле "Поиск" работает
   requirement: |
-    Поле "Поиск" принимает символьные обозначение
+    Поле "Поиск" принимает символьные обозначение и выводит результат на страницу
   prerequisites: |
     Открыта главная страница сайта https://hexlet-products-store.vercel.app/
   test-data: |
@@ -344,5 +344,22 @@
     - Вводим любой символ в сторку поиск 
     - Страница отображает то, что соответствует введённому символу 
   expected-result:
-    Поле "Поиск" принимает введённые символы и выводит результат на странице
+    Поле "Поиск" принял введённые символы и вывел результат на страницу
+    
+- summary: |
+    Хэштеги товаров переводят в "Категории"
+  requirement: |
+    При нажатии на хэштег происходит переход в категорию товара
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps: 
+    - Нажимаем на карточку товара
+    - Переходим на страницу с товаром 
+    - Нажимаем на хэштег товара
+    - Переходим на страницу выбранной категории
+  expected-result: |
+    Хэштег введёт на страницу с соответствующей категорией
+    
  
