--- a/test-cases.yml
+++ b/test-cases.yml
@@ -362,4 +362,131 @@
   expected-result: |
     Хэштег введёт на страницу с соответствующей категорией
     
- 
+- summary: |
+    На странице товара отображается цена со скидкой товара
+  requirement: |
+    Справа от фотографии товара отображается цена со скидкой товара
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps: 
+    - Нажать на карточку товара
+    - Переходим на страницу товара 
+    - Смотрим на страницу товара
+  expected-result:|
+    Отображается цена товара со скидкой
+    
+- summary: |
+    На странице товара отображается цена без скидки товара
+  requirement: |
+    Справа от фотографии товара отображается цена без скидки товара
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps: 
+    - Нажать на карточку товара
+    - Переходим на страницу товара 
+    - Смотрим на страницу товара
+  expected-result:|
+    Отображается цена товара без скидки
+    
+- summary: |
+    На странице товара отображается рейтинг товара
+  requirement: |
+    Справа от фотографии товара отображается рейтинг товара
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps: 
+    - Нажать на карточку товара
+    - Переходим на страницу товара 
+    - Смотрим на страницу товара
+  expected-result:|
+    Рейтинг отображается на странице товара
+    
+- summary: |
+    На странице товара отображается название товара
+  requirement: |
+    Справа от фотографии товара отображается название товара
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps: 
+    - Нажать на карточку товара
+    - Переходим на страницу товара 
+    - Смотрим на страницу товара
+  expected-result:|
+    Название товара отображается на странице товара
+    
+- summary: |
+    В каталоге отображается цена со скидкой товара
+  requirement: |
+    Цена со скидкой отображается на карточке товара в каталоге
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps: 
+    - Смотрим на каталог
+  expected-result:|
+    Цена со скидкой указана на карточке товара
+    
+- summary: |
+    В каталоге отображается цена без скидки товара
+  requirement: |
+    Цена без скидки отображается на карточке товара в каталоге
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps: 
+    - Смотрим на каталог
+  expected-result:|
+    Цена без скидки указана на карточке товара
+    
+- summary: |
+    В каталоге отображается рейтинг товара
+  requirement: |
+    рейтинг товара отображается на карточке товара в каталоге
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps: 
+    - Смотрим на каталог
+  expected-result:|
+    Рейтинг товара указан на карточке товара
+    
+- summary: |
+    В каталоге отображается название товара
+  requirement: |
+    Название товара отображается на карточке товара в каталоге
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps: 
+    - Смотрим на каталог
+  expected-result:|
+    Название товара указан на карточке товара
+    
+- summary: |
+    Фильтр "Производитель" работает правильно
+  requirement: |
+    При использовании фильтра "Производитель" на странице отображается только те товары, которые были выбраны из списка этого фильтра
+  prerequisites: |
+    Открыта главная страница сайта https://hexlet-products-store.vercel.app/
+  test-data: |
+    Тестовых данных нет
+  steps: 
+    - Слева на странице, список фильтра 
+    - Выбираем любого производителя
+    - На странице отображается выбраный производитель
+    - Добовляем ещё одного производителя 
+    - На странице отображаются оба выбранных производителя
+  expected-result: |
+    На странице отображаются только выбранные производители
