--- a/test-cases.yml
+++ b/test-cases.yml
@@ -148,7 +148,7 @@
     На странице сайта, можно просмотреть первые 30 товаров
     
 - summary: |
-    Перемещение внутри сайта с помощью конпки "Следующая"
+    Перемещение внутри сайта с помощью кнопки "Следующая"
   requirement: |
     При нажатии на кнопку, пользователь перемещается на другую страницу с 30 товарами
   prerequisites: |
@@ -374,7 +374,7 @@
     - Нажать на карточку товара
     - Переходим на страницу товара 
     - Смотрим на страницу товара
-  expected-result:|
+  expected-result: |
     Отображается цена товара со скидкой
     
 - summary: |
@@ -389,7 +389,7 @@
     - Нажать на карточку товара
     - Переходим на страницу товара 
     - Смотрим на страницу товара
-  expected-result:|
+  expected-result: |
     Отображается цена товара без скидки
     
 - summary: |
@@ -404,7 +404,7 @@
     - Нажать на карточку товара
     - Переходим на страницу товара 
     - Смотрим на страницу товара
-  expected-result:|
+  expected-result: |
     Рейтинг отображается на странице товара
     
 - summary: |
@@ -419,7 +419,7 @@
     - Нажать на карточку товара
     - Переходим на страницу товара 
     - Смотрим на страницу товара
-  expected-result:|
+  expected-result: |
     Название товара отображается на странице товара
     
 - summary: |
@@ -432,7 +432,7 @@
     Тестовых данных нет
   steps: 
     - Смотрим на каталог
-  expected-result:|
+  expected-result: |
     Цена со скидкой указана на карточке товара
     
 - summary: |
@@ -445,7 +445,7 @@
     Тестовых данных нет
   steps: 
     - Смотрим на каталог
-  expected-result:|
+  expected-result: |
     Цена без скидки указана на карточке товара
     
 - summary: |
@@ -458,7 +458,7 @@
     Тестовых данных нет
   steps: 
     - Смотрим на каталог
-  expected-result:|
+  expected-result: |
     Рейтинг товара указан на карточке товара
     
 - summary: |
@@ -471,7 +471,7 @@
     Тестовых данных нет
   steps: 
     - Смотрим на каталог
-  expected-result:|
+  expected-result: |
     Название товара указан на карточке товара
     
 - summary: |
