--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,5 +1,5 @@
 - summary: |
-    Числовое обозначение над кнопкой "Корзина"
+    Правильное числовое обозначение над кнопкой "Корзина"
   status: pass
   
 - summary: |
