--- a/test-cases.yml
+++ b/test-cases.yml
@@ -104,7 +104,7 @@
     Возвращаемся на главную страницу сайта
     
 - summary: |
-    Покупка товара 
+    Покупка товара совершается
   requirement: |
     При нажатии на кнопку "Оформить заказ", совершается покупка товара
   prerequisites: |
