--- a/testing-report.yml
+++ b/testing-report.yml
@@ -7,7 +7,27 @@
   status: pass
   
 - summary: |
-    Просмотр страницы "Корзина"
+    Добавление нескольких товаров в корзину
+  status: pass
+  
+- summary: |
+    Удаление товара из корзины
+  status: pass
+  
+- summary: |
+    Удаление нескольких товаров из корзины
+  status: pass
+  
+- summary: |
+    Единомоментное удаление товаров их корзины
+  status: pass
+  
+- summary: |
+    Продолжение покупок из корзины
+  status: pass
+  
+- summary: |
+    Покупка товара совершается
   status: pass
   
 - summary: |
@@ -19,7 +39,11 @@
   status: pass
   
 - summary: |
-    Перемещение внутри сайта с помощью конпок "Предыдущая" и "Следующая"
+    Перемещение внутри сайта с помощью конпок "Следующая"
+  status: pass
+  
+- summary: |
+    Перемещение внутри сайта с помощью конпки "Предыдущая"
   status: pass
 
 - summary: |
@@ -35,6 +59,81 @@
   status: pass
   
 - summary: |
+    Поиск по ключевому слову, не выводит несуществующие товары
+  status: pass
+  
+- summary: |
     Фильтр цен работает правильно
   status: pass
+  
+- summary: |
+    Фильтр цен взаимодействует не с нулём или не с целыми положительными числами
+  status: pass
+  
+- summary: |
+    Фильтр по наличию включён
+  status: pass
+  
+- summary: |
+    Фильтр по наличию отключён
+  status: fail
+
+- summary: |
+    Интерактивный поиск работает правильно
+  status: pass
+  
+- summary: |
+    Интерактивный поиск  не отображает несуществующие товары при вводе одного символа
+  status: pass
+  
+- summary: |
+    Интерактивный поиск  не отображает несуществующие товары при вводе комбинций символов
+  status: pass
+  
+- summary: |
+    Поле "Поиск" работает
+  status: pass
+  
+- summary: |
+    Хэштеги товаров переводят в "Категории"
+  status: fail
+  
+- summary: |
+    На странице товара отображается цена со скидкой товара
+  status: pass
+  
+- summary: |
+    На странице товара отображается цена без скидки товара
+  status: pass
+  
+- summary: |
+    На странице товара отображается рейтинг товара
+  status: pass
+  
+- summary: |
+    На странице товара отображается название товара
+  status: pass
+  
+- summary: |
+    В каталоге отображается цена со скидкой товара
+  status: pass
+  
+- summary: |
+    В каталоге отображается цена без скидки товара
+  status: pass
+  
+- summary: |
+    В каталоге отображается рейтинг товара
+  status: fail
+ 
+- summary: |
+    В каталоге отображается название товара
+  status: pass
+  
+- summary: |
+    Фильтр "Производитель" работает правильно
+  status: pass
+   
+   
+ 
    
